--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Eksamensavis V2-E2022-M1-KLJO.docx
 /Eksamensopgave-M1-V2-E2022-KLJO.docx
 ~$samensopgave-M1-V2-E2022-KLJO.docx
+design - fantasybooks.png
